--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body {
   margin: 5px 0;
 }
 
-.output-element {
+.output-title {
   border-radius: 5px;
   padding: 5px;
 }/*# sourceMappingURL=style.css.map */
