--- a/styles/style.sass
+++ b/styles/style.sass
@@ -28,6 +28,8 @@ body
     input
         margin: 5px 0    
 
-.output-element
-    border-radius: 5px
-    padding: 5px
+.output
+    &-title
+        border-radius: 5px
+        padding: 5px
+    
