--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,12 @@ body {
   width: 100px;
   margin-top: 10px;
 }
+.btnsContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+}
 
 .outputInner {
   display: flex;
@@ -27,6 +33,8 @@ body {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  border: 1px solid #000000;
+  margin: 10px 0;
 }
 .outputInner input {
   margin: 5px 0;
