--- a/styles/style.sass
+++ b/styles/style.sass
@@ -18,6 +18,12 @@ body
 .btn
     width: 100px    
     margin-top: 10px
+    &sContainer
+        display: flex
+        width: 100%
+        justify-content: space-around
+        align-items: center
+
 
 .outputInner
     display: flex
@@ -25,6 +31,8 @@ body
     justify-content: center
     align-items: center
     padding: 10px
+    border: 1px solid #000000
+    margin: 10px 0
     input
         margin: 5px 0    
 
